--- a/src/app.css
+++ b/src/app.css
@@ -55,7 +55,7 @@ h3 {
   padding: 0.75rem 1rem;
   border: none;
   transition: all 0.2s ease;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: "Trebuchet MS", sans-serif;
 }
 
 .project-links a:nth-child(1) {
@@ -104,6 +104,12 @@ a {
   color: inherit;
   font-weight: normal;
   margin-bottom: .5em;
+  margin-top: 0.4rem;
 }
+
+.resume-container ul {
+  margin-left: 20px;
+}
+
 
 
